@@ -519,6 +519,7 @@ inlead,	   0x4B9BB0,	0x4C1230,	0x4B9C40,	"City_has_hud_icon",				"bool (__fastca
 inlead,	   0x4BFBF0,	0x4C71B0,	0x4BFC80,	"City_draw_on_map",				"void (__fastcall *) (City * this, int edx, Map_Renderer * map_renderer, int pixel_x, int pixel_y, int param_4, int param_5, int param_6, int param_7)"
 inlead,	   0x4E7E30,	0x4F08F0,	0x4E7EF0,	"MenuUnitItem_write_text_to_temp_str",		"void (__fastcall *) (MenuUnitItem * this)"
 define,	   0xCAB2D8,	0xCCDB88,	0xCAB298,	"temp_str",					"char[4096]"
+repl call, 0x5EDD89,	0x5FD7BE,	0x5EDCB9,	"Tile_m74_Set_Square_Type_for_hill_gen",	""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
