@@ -515,3 +515,6 @@ unit_limits = []
 
 ; Removes barracks/harbor/airport requirement from upgrades
 allow_upgrades_in_any_city = false
+
+; Stops the game from placing volcanos during map generation. Any tiles that would have been volcanos will be mountains instead.
+do_not_generate_volcanos = false
